implement highlights API, lots of search tools, search page, etc. Mostly ready for v1.0.0

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -3,3 +3,15 @@ span {
     display: inline-flex;
     align-items: center;
 }
+
+.logo {
+    /* height: 32px; */
+    float: left;
+    background: rgba(80, 80, 80);
+    margin: 16px;
+    display: flex;
+    align-items: center;
+    font-style: italic;
+
+    color: #777777;
+}
